@@ -21,6 +21,7 @@
 ''Alpha1 released''
 
 * Saving/resuming the rendering now includes all PhotonGI cache information and entries
+* Added the support for new shape "group"
 
 ### Fixed Bugs
 
